# StarshipOS

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIFFERENT_WAY.md  IMPORTANT-README.md  README.md  Roadmap.md  SECURITY.md  pom.xml  pom.xml.bak  sonar-project.properties  starship-os.jks  starship.jks
.github/workflows/: blank.yml  build.yml  maven.yml
acpica/: pom.xml
acpica/scripts/: clean.sh  install.sh  package.sh
ada/: README.md
ahci-driver/: README.md  pom.xml
atkins/: README.md  pom.xml
binaries/: pom.xml
binaries/scripts/: install.sh
bootloader/: CMakeLists.txt  linker.ld
bootloader/src/: main.c
bootloader/tools/efi-toolchain/: CMakeLists.txt
bootloader/tools/efi-toolchain/toolchain/: build-toolchain.sh
bootstrap/: pom.xml
buildroot/: make-help.txt  pom.xml
buildroot/buildroot/: .tmpconfig.2914064
buildroot/scripts/: clean.sh  compile.sh  default.config  default.config.old  install.sh  linux6.6.0.config  package.sh
busybox/: .config  .config.old  busybox-archive.xml  pom.xml
busybox/busybox/: .config  .config.old
busybox/scripts/: build.sh  build_busybox.sh  clean.sh
demo-l4re-micro-hypervisor/: README.md  pom.xml
doc/: 01-03-2025-StarshipOS-notes.md  12-30-2024-StarshipOS-notes.md  JavaFX-doc.md  StarshipOS_12-15-2024-p2.md  events.md  vision.md
drivers-frst/: README.md  pom.xml
drivers-frst/scripts/: compile.sh
emmc-driver/: pom.xml
fiasco/: pom.xml
grub/: busybox-archive.xml  pom.xml
grub/scripts/: build.sh  build_grub_cfg.sh  clean.sh  uber-clean.sh
grub/src/: grub.cfg
initramfs/: initramfs-archive.xml  pom.xml
initramfs/scripts/: build.sh  clean.sh  create_image.sh
io/: README.md  pom.xml
java/: configure-help.md  configure-help.txt  java-archive.xml  make-help.md  make-help.txt  pom.xml
java/scripts/: build.sh  build_java.sh  clean.sh  generate_header.sh
jvm/: pom.xml
libblock-device/: README.md  pom.xml
libfdt/: pom.xml
live_cd/: pom.xml
live_cd/scripts/: build.sh  clean.sh  create_bootable_iso.sh
live_cd_image/: pom.xml
live_cd_image/scripts/: build.sh
manifest/: README.md
mk/: README.md
notes/: 01-01-2025-StarshipOS-notes.md  01-26-2025-StarshipOS-notes.md  01-29-2025-StarshipOS-notes.md  02-26-2025-StarshipOS-notes.md  02-26-2025-StarshipOS-notes.odt  12-28-2024-StarshipOS-notes-p2.md  12-28-2024-StarshipOS-notes.md  Eventing-dbus-cxx.md  Init.md  StarshipOS.docx  StarshipOS.md  StarshipOS_12-25-2024-p1.md  Vision.docx  finance.md  install_notes.md  linux6.6.0.config  vision.md
openjdk23/: pom.xml
populate_rootfs/: pom.xml
pre-packaged-binaries/: pom.xml
qcow2_image/: bootmount.txt  pom.xml  rootmount.txt
readline/: pom.xml
scripts/: add_license_header.sh  build.sh  clean.sh  compile.sh  create_qcow2_image.sh  fs_library.sh  generate_header.sh  header_template.txt  install.sh  make-xconfig.sh  mount_rootfs.sh.bak  package.sh  run-vm.sh  run.sh  setup_l4re.sh  uber-clean.sh  umount_rootfs.sh.bak  xconfig.sh
starship/: .config  config.bak  make-help.md  make-help.txt  pom.xml  starship-archive.xml
starship-api/: pom.xml
starship-init/: pom.xml
starship-os_acpica/: README.md
starship-os_ada/: pom.xml
starship-os_bootstrap/: README.md
starship-os_cons/: README.md  pom.xml
starship-os_emmc-driver/: README.md
starship-os_fiasco/: README.md  pom.xml
starship-os_gnu-efi/: README.md  pom.xml
starship-os_ham/: README.md  pom.xml
starship-os_jdk/: README.md
starship-os_l4_virtio-net-switch/: pom.xml
starship-os_l4re-core/: README.md  pom.xml
starship-os_l4virtio/: README.md  pom.xml
starship-os_libfdt/: README.md
starship-os_libvcpu/: README.md  pom.xml
starship-os_manifest/: pom.xml
starship-os_mk/: pom.xml
starship-os_readline/: README.md
starship-os_rtc/: README.md  pom.xml
starship-os_tinit/: README.md  pom.xml
starship-os_tools/: pom.xml
starship-os_tvmm/: pom.xml
starship-sdk/: pom.xml
starship-userland/: pom.xml
system-bridge/: pom.xml  system-bridge-archive.xml
system-bridge-cpp/: pom.xml
system-bridge-java/: pom.xml
tools/: pom.xml
tvmm/: README.md
usb-image/: pom.xml
userland-java/: pom.xml
uvmm/: README.md  pom.xml
virtio-net/: README.md  pom.xml
virtio-net-switch/: README.md
zlib/: README.md  pom.xml
(+28699 files in other folders)
